Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Current svn
===========
 o #15137 Bugfix killClient() does now properly destroy clients which have no session
   for example clients which came to live with a PtP message.

 o #15093 Extended XmlScript with
   <wait delay="60000" updates="4" message="Waiting for 4 updates (timeout is 1 min) ..."/>

 o #15055 RequestReplyExecutor.java returns now address.clone
   TODO - pass specific address of client for authentication

 o #15047 Added xmlBlaster ant task
   This allows to access xmlBlaster from within ant with the xmlBlaster XML scripting language
   See: http://www.xmlblaster.org/xmlBlaster/doc/api/org/xmlBlaster/contrib/ant/XmlBlasterTask.html

 o #15041 Patch from Balázs Póka which makes defensive cast to URLClassLoader
   Allows Java WebStart and none standalone apps.

 o #15038 Big topic DOM: Changed default encoding from ISO-8859-1 to UTF-8
   This is configurable with -xmlBlaster/topicDom/encoding for backward compatible behaviour

 o #15037 Bugfix TopicHandler (multi threading issue)
   By Eugene Wu for topic going unintended into unreferenced for volatile messages

 o #15029 Corba xmlBlaster.idl testing 'wstring' instead of 'string'
   - Java client to java server works fine (encoding UTF-8, windows-1252 etc.)
   - Testing with mico 2.3.12 works fine only for 'string'
     The 'wstring' variant lost its QoS during connect()
     so we stay with 'string'
 
 o #15014 MX4J Adaptor could not find the necessary xsl in Windows. This issue is now fixed.

 o #15006 Added 'domain' to erase event

 o #15003 XPathFilter bugfix
    Does not throw exception anymore for not wellformed message content

 o #15002 Java client library methods added to I_XmlBlasterAccess
   - Added convenience method to send an administrative command to xmlBlaster
     String sendAdministrativeCommand(String command)