@@ -3,6 +3,8 @@ The "#99999" numbers are Subversion revision numbers.
 
 Current svn
 ===========
+ o #15139 Bugfix for ant XmlBlasterTask: Closing file output streams
+
  o #15137 Bugfix killClient() does now properly destroy clients which have no session
    for example clients which came to live with a PtP message.
 
